// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compute-element-view > view of cloud (exclude cloud, amazon.*) 1`] = `
{
  "autoLayout": "TB",
  "edges": [
    {
      "id": "cloud.frontend:cloud.backend",
      "label": null,
      "parent": null,
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "id": "customer:cloud.frontend",
      "label": null,
      "parent": null,
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
    {
      "id": "support:cloud.frontend",
      "label": null,
      "parent": null,
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
  ],
  "id": "cloud",
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "kind": "actor",
      "parent": null,
      "shape": "person",
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "id": "support",
      "kind": "actor",
      "parent": null,
      "shape": "person",
      "title": "support",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.frontend",
      "kind": "container",
      "parent": null,
      "shape": "browser",
      "title": "frontend",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.backend",
      "kind": "container",
      "parent": null,
      "shape": "rectangle",
      "title": "backend",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
    {
      "exprs": [
        {
          "element": "cloud",
          "isDescedants": false,
        },
        {
          "element": "amazon",
          "isDescedants": true,
        },
      ],
      "isInclude": false,
    },
  ],
  "title": "",
  "viewOf": "cloud",
}
`;

exports[`compute-element-view > view of cloud 1`] = `
{
  "autoLayout": "TB",
  "edges": [
    {
      "id": "cloud.frontend:cloud.backend",
      "label": null,
      "parent": "cloud",
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "id": "cloud.backend:amazon",
      "label": null,
      "parent": null,
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon",
    },
    {
      "id": "customer:cloud.frontend",
      "label": null,
      "parent": null,
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
    {
      "id": "support:cloud.frontend",
      "label": null,
      "parent": null,
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
  ],
  "id": "cloud",
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "kind": "actor",
      "parent": null,
      "shape": "person",
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "id": "support",
      "kind": "actor",
      "parent": null,
      "shape": "person",
      "title": "support",
    },
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "id": "cloud",
      "kind": "system",
      "navigateTo": "fakeView",
      "parent": null,
      "shape": "rectangle",
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.frontend",
      "kind": "container",
      "parent": "cloud",
      "shape": "browser",
      "title": "frontend",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.backend",
      "kind": "container",
      "parent": "cloud",
      "shape": "rectangle",
      "title": "backend",
    },
    {
      "children": [],
      "color": "primary",
      "id": "amazon",
      "kind": "system",
      "parent": null,
      "shape": "rectangle",
      "title": "amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "viewOf": "cloud",
}
`;

exports[`compute-element-view > view of cloud.frontend 1`] = `
{
  "autoLayout": "TB",
  "edges": [
    {
      "id": "cloud.frontend.adminPanel:cloud.backend",
      "label": null,
      "parent": null,
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend",
    },
    {
      "id": "cloud.frontend.dashboard:cloud.backend",
      "label": null,
      "parent": null,
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend",
    },
    {
      "id": "customer:cloud.frontend.dashboard",
      "label": null,
      "parent": null,
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
    {
      "id": "support:cloud.frontend.adminPanel",
      "label": null,
      "parent": null,
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
  ],
  "id": "cloudfrontend",
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "kind": "actor",
      "parent": null,
      "shape": "person",
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "id": "support",
      "kind": "actor",
      "parent": null,
      "shape": "person",
      "title": "support",
    },
    {
      "children": [
        "cloud.frontend.adminPanel",
        "cloud.frontend.dashboard",
      ],
      "color": "primary",
      "id": "cloud.frontend",
      "kind": "container",
      "parent": null,
      "shape": "browser",
      "title": "frontend",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.frontend.adminPanel",
      "kind": "component",
      "parent": "cloud.frontend",
      "shape": "rectangle",
      "title": "adminPanel",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.frontend.dashboard",
      "kind": "component",
      "parent": "cloud.frontend",
      "shape": "rectangle",
      "title": "dashboard",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.backend",
      "kind": "container",
      "parent": null,
      "shape": "rectangle",
      "title": "backend",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "viewOf": "cloud.frontend",
}
`;

exports[`compute-element-view > view with 3 levels 1`] = `
{
  "autoLayout": "TB",
  "edges": [
    {
      "id": "cloud.frontend.adminPanel:cloud.backend.graphql",
      "label": null,
      "parent": "cloud",
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend.graphql",
    },
    {
      "id": "cloud.frontend.dashboard:cloud.backend.graphql",
      "label": null,
      "parent": "cloud",
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend.graphql",
    },
    {
      "id": "cloud.backend.graphql:cloud.backend.storage",
      "label": null,
      "parent": "cloud.backend",
      "relations": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "source": "cloud.backend.graphql",
      "target": "cloud.backend.storage",
    },
    {
      "id": "cloud.backend.storage:amazon",
      "label": null,
      "parent": null,
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend.storage",
      "target": "amazon",
    },
    {
      "id": "customer:cloud.frontend.dashboard",
      "label": null,
      "parent": null,
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
    {
      "id": "support:cloud.frontend.adminPanel",
      "label": null,
      "parent": null,
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
  ],
  "id": "cloud3levels",
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "kind": "actor",
      "parent": null,
      "shape": "person",
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "id": "support",
      "kind": "actor",
      "parent": null,
      "shape": "person",
      "title": "support",
    },
    {
      "children": [
        "cloud.frontend.adminPanel",
        "cloud.frontend.dashboard",
        "cloud.backend",
      ],
      "color": "primary",
      "id": "cloud",
      "kind": "system",
      "navigateTo": "fakeView",
      "parent": null,
      "shape": "rectangle",
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.frontend.adminPanel",
      "kind": "component",
      "parent": "cloud",
      "shape": "rectangle",
      "title": "adminPanel",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.frontend.dashboard",
      "kind": "component",
      "parent": "cloud",
      "shape": "rectangle",
      "title": "dashboard",
    },
    {
      "children": [
        "cloud.backend.graphql",
        "cloud.backend.storage",
      ],
      "color": "primary",
      "id": "cloud.backend",
      "kind": "container",
      "parent": "cloud",
      "shape": "rectangle",
      "title": "backend",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.backend.graphql",
      "kind": "component",
      "parent": "cloud.backend",
      "shape": "rectangle",
      "title": "graphql",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.backend.storage",
      "kind": "component",
      "parent": "cloud.backend",
      "shape": "rectangle",
      "title": "storage",
    },
    {
      "children": [],
      "color": "primary",
      "id": "amazon",
      "kind": "system",
      "parent": null,
      "shape": "rectangle",
      "title": "amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
        {
          "element": "cloud.frontend",
          "isDescedants": true,
        },
        {
          "element": "cloud.backend",
          "isDescedants": true,
        },
      ],
      "isInclude": true,
    },
    {
      "exprs": [
        {
          "element": "cloud.frontend",
          "isDescedants": false,
        },
      ],
      "isInclude": false,
    },
  ],
  "title": "",
  "viewOf": "cloud",
}
`;
